# PDE_solver_FEM

./: .gitignore  CMakeLists.txt  README.md  glad.c  imgui.ini  main.cpp
general/: event_handler.cpp  event_handler.h  state.cpp  state.h
general/graphics/: buffer.cpp  buffer.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  render_target.cpp  render_target.h  texture.cpp  texture.h  vao.cpp  vao.h
general/graphics/glsl/: color.frag  color.vert  laplacian.frag  point.frag  post.frag  post.vert  white.frag
general/graphics/imgui/: imgui_stdlib.h
general/graphics/shader/: shader.cpp  shader.h  shader_loader.cpp  shader_loader.h
solver/: bbhierarchy.cpp  bbhierarchy.h  comparators.cpp  comparators.h  exprtk_wrapper.cpp  exprtk_wrapper.h  femmesh.cpp  femmesh.h  quadedge.cpp  quadedge.h  quadtree.cpp  quadtree.h  solver.cpp  solver.h
